r8168 (8.045.08-1) UNRELEASED; urgency=medium

  * New upstream release 8.045.08 (2017-09-15).
  * linux-4.11.patch: Remove, fixed upstream.
  * Set Priority to optional.
  * Bump Standards-Version to 4.1.1.
  * Set XS-Autobuild: yes.

 -- Andreas Beckmann <anbe@debian.org>  Wed, 04 Oct 2017 10:19:42 +0200

r8168 (8.044.02-2) unstable; urgency=medium

  * linux-4.7.patch: New, fix building the module for Linux 4.11, thanks to
    Jan Schwarzrock.  (Closes: #864867)
  * Bump Standards-Version to 4.0.0 (no changes needed).

 -- Andreas Beckmann <anbe@debian.org>  Sat, 08 Jul 2017 23:29:30 +0200

r8168 (8.044.02-1) unstable; urgency=medium

  * New upstream release 8.044.02 (2017-02-13).
  * linux-2.6.32.patch: Remove, fixed upstream.
  * Switch to debhelper compat level 10.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 21 Feb 2017 03:05:24 +0100

r8168 (8.043.02-1) unstable; urgency=medium

  * New upstream release 8.043.02 (2016-10-25).
  * linux-4.7.patch: Remove, fixed upstream.

 -- Andreas Beckmann <anbe@debian.org>  Sat, 05 Nov 2016 10:35:19 +0100

r8168 (8.042.00-2) unstable; urgency=medium

  * linux-4.7.patch: New, from Arch Linux, fix building the module for
    Linux 4.7.  (Closes: #836961)
  * linux-2.6.32.patch: New, fix building the module for Linux 2.6.32.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 12 Sep 2016 11:09:22 +0200

r8168 (8.042.00-1) unstable; urgency=medium

  * New upstream release 8.042.00 (2016-05-12).
  * linux-4.5.patch: Remove, fixed upstream.

 -- Andreas Beckmann <anbe@debian.org>  Sat, 28 May 2016 12:42:06 +0200

r8168 (8.041.01-1) unstable; urgency=medium

  * New upstream release 8.041.01 (2016-01-12).
  * linux-4.5.patch: New, fix building the module for Linux 4.5.
  * Bump Standards-Version to 3.9.6 (no changes needed).
  * Update Vcs-Git URL.

 -- Andreas Beckmann <anbe@debian.org>  Fri, 08 Apr 2016 18:34:17 +0200

r8168 (8.041.00-1) unstable; urgency=medium

  [ Andreas Beckmann ]